# src/models/users/users.router.ts
@@ -6,35 +6,52 @@ var jwt = require('jsonwebtoken');
 import express, { Request, Response } from "express";
 
 /**
+ * @swagger
+ *
+ * definitions:
+ *   User:
+ *     type: object
+ *     required:
+ *       - user
+ *       - password
+ *     properties:
+ *       user:
+ *         type: string
+ *       password:
+ *         type: string
+ */
+
+/**
  * Router Definition
  */
 
 export const usersRouter = express.Router();
+
 /**
  * @swagger
- * /users/login:
- *   post:
- *     description: Login to the application
- *     produces:
- *       - application/json
- *     tags:
- *       - Users
- *     parameters:
- *       - name: user
- *         description: Username to use for login.
- *         in: formData
+ * paths:
+ *   /users/login:
+ *     post:
+ *       summary: Login to the api
+ *       tags:
+ *         - User
+ *       requestBody:
+ *         description: The credentials are admin/admin
  *         required: true
- *         type: string
- *       - name: password
- *         description: User's password.
- *         in: formData
- *         required: true
- *         type: string
- *     responses:
- *       200:
- *         description: login
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '#/definitions/User'
+ *       responses:
+ *         '201':
+ *           description: Created
  */
 usersRouter.post('/login', function(req, res) {
+
+    console.log('======================');
+    console.log(req.body);
+    console.log('======================');
+
     if(req.body.user === "admin" && req.body.password === "admin"){
         var token = jwt.sign({ id: 1 }, "RANDOM_TOKEN_SECRET", {
             expiresIn: 86400
